snapshots/truth__var__tests__err_adjacent_scope.snap
---
source: src/var.rs
expression: "resolve_expect_err(r#\"{\n        if (true) {\n            int a = 4;\n            int b = a * 3;\n        }\n        if (true) {\n            int b = a * 3;\n        }\n    }\"#).trim()"
---
error: unknown variable 'a'
  ┌─ <input>:7:21
  │
7 │             int b = a * 3;
  │                     ^ not found in this scope
